[gd_scene load_steps=12 format=3 uid="uid://b2aldla6h65yh"]

[ext_resource type="Script" uid="uid://draupikafg6fn" path="res://Scripts/Player/Jogador.gd" id="1_twm4h"]
[ext_resource type="Texture2D" uid="uid://b3knkhe1815cs" path="res://assets/spr_personagemTeste-Sheet.png" id="2_4ee2j"]
[ext_resource type="Texture2D" uid="uid://e6s0khjnup7x" path="res://assets/spr_personagemTeste.png" id="3_i8uuj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ee2j"]
size = Vector2(12, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8uuj"]
atlas = ExtResource("2_4ee2j")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l884e"]
atlas = ExtResource("2_4ee2j")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i8uuj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8uuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l884e")
}],
"loop": true,
"name": &"Running",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_i8uuj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yd1yt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6k61"]
bg_color = Color(0.9494094, 0, 0.22253603, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8uuj"]
size = Vector2(14, 16)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ra11p"]
bg_color = Color(0.22050229, 0.17474711, 0.8895782, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_color = Color(0.04087992, 0.25368708, 0.29029644, 1)
border_blend = true
corner_detail = 18

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_twm4h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
shape = SubResource("RectangleShape2D_4ee2j")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.84509724, 0.8398388, 0.83060575, 1)
z_index = 2
sprite_frames = SubResource("SpriteFrames_i8uuj")
animation = &"Running"
autoplay = "idle"

[node name="LifeBar" type="ProgressBar" parent="."]
offset_left = -14.0
offset_top = -10.0
offset_right = -10.0
offset_bottom = 18.0
rotation = -1.5707964
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_yd1yt")
theme_override_styles/fill = SubResource("StyleBoxFlat_y6k61")
step = 0.1
fill_mode = 2
show_percentage = false

[node name="PlayerArea" type="Area2D" parent="." groups=["Player"]]
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
z_index = 2
shape = SubResource("RectangleShape2D_i8uuj")

[node name="PlayerResources" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="PlayerResources"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="XPBar" type="ProgressBar" parent="PlayerResources/Control"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_top = 15.0
offset_right = 15.0
offset_bottom = 575.0
grow_vertical = 2
rotation = -1.5707964
theme_override_styles/fill = SubResource("StyleBoxFlat_ra11p")
fill_mode = 2
show_percentage = false

[connection signal="body_entered" from="PlayerArea" to="." method="_on_player_area_body_entered"]
